--- a/frontend/src/app/components/modals/group/group-create/group-create.component.html
+++ b/frontend/src/app/components/modals/group/group-create/group-create.component.html
@@ -2,7 +2,6 @@
   aria-labelledby="staticBackdropLabel" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
-
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="addFormModal">Nuevo grupo</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
@@ -46,7 +45,7 @@
           @if (searched.length !== 0 ) {
             <ul class="list-group list-group-numbered">
               @for (searchedUser of searched; track $index) {
-                <li class="list-group-item d-flex justify-content-between align-items-start" (click)="handleAddUser(searchedUser.id)">
+                <li class="list-group-item d-flex justify-content-between align-items-start" (click)="handleAddUser(searchedUser)">
                   <div class="ms-2 me-auto">
                     <div class="fw-bold">{{searchedUser.username}}</div>
                     {{searchedUser.name}} {{searchedUser.lastName}}
@@ -55,12 +54,13 @@
               }
             </ul>
           }
-
-          <div class="mt-4">
-            <span class="badge rounded-pill text-bg-dark py-2 px-3">Juliana</span>
-            <span class="badge rounded-pill text-bg-dark py-2 px-3 ms-1">Matias</span>
-            <span class="badge rounded-pill text-bg-dark py-2 px-3 ms-1">Manaos</span>
-          </div>
+          @if (selectedUsers.length !== 0) {
+            <div class="mt-4">
+              @for (user of selectedUsers; track $index) {
+                  <span class="badge rounded-pill text-bg-dark py-2 px-3 me-1">{{user.username}}</span>
+              }
+            </div>
+          }
         </form>
       </div>
 
