Extraccion de componente de groups en main y sidebar para mejorar la legibilidad del codigo. Ademas se agregaron los renderizados condicionales de acuerdo al tipo de grupo seleccionado

--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -5,20 +5,24 @@
       style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
       <h1 class="display-3 pt-4" style="color: white;">Grupos</h1>
       <button type="button" class="btn btn-lg btn-light px-4 mt-3" id="btn-new-group"
-        data-bs-target="#modal-group-add-form" data-bs-toggle="modal" (click)="getGroupCategories()">
+        data-bs-target="#modal-group-add-form" data-bs-toggle="modal">
         Nuevo grupo
       </button>
     </div>
 
-    <!-- MODALS para la creacion y edicion de grupos. -->
+    <!-- MODAL para la creacion de grupos. -->
     <app-group-create [groupCategories]="groupCategories" [user]="currentUser!" />
-    <app-group-details [selectedSpending]="selectedSpending" [deleteSelectedSpending]="deleteSelectedSpending" />
 
+    <!-- SELECTOR DE GRUPOS (Mis grupos y Grupos en los que participa el usuario) -->
     <div class="btn-group mt-4" role="group" aria-label="Basic radio toggle button group">
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off" checked>
+      <input type="radio" [(ngModel)]="selectedGroupOption" [value]="'misGrupos'"
+        (ngModelChange)="setGroupOption($event)" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off"
+        [checked]="selectedGroupOption === 'misGrupos'">
       <label class="btn btn-outline-light" for="btnradio2">Mis grupos</label>
 
-      <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+      <input type="radio" [(ngModel)]="selectedGroupOption" [value]="'gruposEnLosQueParticipo'"
+        (ngModelChange)="setGroupOption($event)" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off"
+        [checked]="selectedGroupOption === 'gruposEnLosQueParticipo'">
       <label class="btn btn-outline-light" for="btnradio3">Grupos en los que formo parte</label>
     </div>
   </div>
@@ -27,83 +31,19 @@
   <div class="container" style="max-width: 1200px;">
     <div class="mt-4 pb-5">
       <div class="row">
-        <!-- Columna lateral a la izquierda -->
+        <!-- Columna lateral a la izquierda - Sidebar seleccion de grupos -->
         <div class="col-md-4 sidebar">
-          <ul class="list-group">
-            @if (groups.listOwnedGroups.length === 0) {
-              <li class="list-group-item p-4 text-break" style="background-color: #b0afaf; border-radius: 7px; 
-                cursor: default;">
-                <span style="align-items: center; display: flex; justify-content:center;">
-                  ...
-                </span>
-            }
-            @else {
-              @for (group of groups.listOwnedGroups; track $index) {
-              <li class="list-group-item p-4 text-break" id={{group.groupId}} (click)="getGroup(group.groupId)"
-                [class.selected]="isSelectedGroup(group.groupId)">
-                <span style="align-items: center; display: flex; justify-content:center;">
-                  {{ group.name }}
-                </span>
-              </li>
-              }
-            }
-          </ul>
+          <app-groups-sidebar [groups]="groups" 
+            [selectedGroupOption]="selectedGroupOption" [actualGroup]="actualGroup" [groupSpendings]="groupSpendings"/>
         </div>
-
+        
         <!-- Contenido a la derecha -->
         <div class="col-md-8 content px-5 py-5" style="background-color: #f6f6f6; border-radius: 7px;">
-          <!-- Detalles del grupo -->
-          @if (groups.listOwnedGroups.length === 0) {
-            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-              <!-- <i class="bi bi-files" style="font-size: 15em; color: rgba(0, 0, 0, 0.367);"></i> -->
-              <img style="width: 20em;" src="../../../assets/images/no_data.svg" alt="Descripción alternativa">
-              <h2 class="fs-4 text-center" style="margin-top: 1em; width: 50%; color: #505050;">
-                No ha creado ningun grupo
-              </h2>
-            </div>
-          }
-          @else{
-            @if (actualGroup.groupId == -1) {
-            <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-              <i class="bi bi-files" style="font-size: 15em; color: rgba(0, 0, 0, 0.367);"></i>
-              <h2 class="fs-4 text-center" style="margin-top: -1.5em; width: 50%; color: #505050;">
-                Seleccione un grupo para ver los detalles
-              </h2>
-            </div>
-            }
-            @else {
-            <div style="position: relative;">
-              <h2 class="text-break main-title-details-group" style="width: 75%;">{{actualGroup.name}}</h2>
-              <!-- <hr /> -->
-              <!-- <span class="badge rounded-pill text-bg-dark details-price">${{actualGroup.totalBalance}}</span> -->
-              <h3 class="details-price">${{actualGroup.totalBalance}}</h3>
-              <p class="mt-2">
-                <b>Categoria:</b> {{ actualGroup.groupCategory.name }}
-                <br />
-                <b>Descripcion:</b> {{ actualGroup.description }}
-              </p>
-              <i class="bi {{actualGroup.groupCategory.base64Image}}"
-                style="font-size: 8.8em; color: rgba(0, 0, 0, 0.367); position: absolute; top: -.35em; right: 0"></i>
-              <hr />
-            </div>
-
-            <div class="mt-4">
-              <!-- Lista invitaciones -->
-              <span class="mb-1" style="display: flex;">
-                <h4>Invitaciones</h4>
-              </span>
-
-              <app-groups-invitations-list [invitations]="actualGroup.invitations" />
-
-              <!-- Lista Gastos -->
-              <h4 class="mt-5 mb-2">Gastos</h4>
-              <div class="col-12 overflow-x-hidden spendings-list" style="max-height:350px;">
-                <app-groups-list [groupSpendings]="groupSpendings" [setSelectedSpending]="setSelectedSpending" />
-              </div>
-            </div>
-            }
-          }
+          <!-- Contenido MAIN de grupos -->
+          <app-groups-main [groups]="groups" [actualGroup]="actualGroup" [groupSpendings]="groupSpendings"
+            [selectedGroupOption]="selectedGroupOption" />
         </div>
+
       </div>
     </div>
   </div>
