--- a/frontend/src/app/components/groups/groups.component.css
+++ b/frontend/src/app/components/groups/groups.component.css
@@ -29,7 +29,7 @@
     max-height: 800px;
 }
 
-li {
+/* li {
     cursor: pointer;
 }
 
@@ -39,7 +39,7 @@ li:not(.selected):hover {
 
 .selected {
     background-color: #d4d4d4;
-}
+} */
 
 h1 {
     font-family: Poppins Bold, sans-serif;
