--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,1 +1,3 @@
-
+div:where(.swal2-container) button:where(.swal2-styled).swal2-default-outline:focus{
+    box-shadow: 0 0 0 3px rgba(95, 105, 116, 0.5) !important;
+}
