--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -43,7 +43,7 @@
         <div class="col-md-8 content px-5 py-5" style="background-color: #f6f6f6; border-radius: 7px;">
           <!-- Contenido MAIN de grupos -->
           <app-groups-main [groups]="groups" [actualGroup]="actualGroup" [groupSpendings]="groupSpendings"
-            [selectedGroupOption]="selectedGroupOption" />
+            [selectedGroupOption]="selectedGroupOption" [user]="currentUser!" />
         </div>
 
       </div>
