--- a/frontend/src/app/components/groups/groups-list/groups-list.component.html
+++ b/frontend/src/app/components/groups/groups-list/groups-list.component.html
@@ -1,27 +1,35 @@
-<div class="table-responsive">
-  <table class="table table-striped table-hover table-bordered spendings-list">
-    <thead class="table-secondary">
-      <tr>
-        <th scope="col">Nombre</th>
-        <th scope="col">Descripcion</th>
-        <th scope="col">Monto</th>
-        <th scope="col">Fecha</th>
-        <th scope="col" class="text-center">Detalles</th>
-      </tr>
-    </thead>
-    <tbody class="table-group-divider" style="vertical-align: middle;">
-      @for (spending of groupSpendings; track $index) {
-      <tr>
-        <td>{{spending.owner.name}}</td>
-        <td>{{spending.description}}</td>
-        <td>${{spending.totalAmount}}</td>
-        <td>{{spending.createdAt}}</td>
-        <td class="text-center">
-          <i class="bi bi-plus-circle-fill" style="font-size: 1.5em;" data-bs-target="#modal-group-details"
-            data-bs-toggle="modal" (click)="setSelectedSpending(spending)"></i>
-        </td>
-      </tr>
-      }
-    </tbody>
-  </table>
-</div>
+@if (groupSpendings.length !== 0) {
+
+  <div class="table-responsive">
+    <table class="table table-striped table-hover table-bordered spendings-list">
+      <thead class="table-secondary">
+        <tr>
+          <th scope="col">Nombre</th>
+          <th scope="col">Descripcion</th>
+          <th scope="col">Monto</th>
+          <th scope="col">Fecha</th>
+          <th scope="col" class="text-center">Detalles</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider" style="vertical-align: middle;">
+        @for (spending of groupSpendings; track $index) {
+        <tr>
+          <td>{{spending.owner.name}}</td>
+          <td>{{spending.description}}</td>
+          <td>${{spending.totalAmount}}</td>
+          <td>{{spending.createdAt}}</td>
+          <td class="text-center">
+            <i class="bi bi-plus-circle-fill" style="font-size: 1.5em;" data-bs-target="#modal-group-details"
+              data-bs-toggle="modal" (click)="setSelectedSpending(spending)"></i>
+          </td>
+        </tr>
+        }
+      </tbody>
+    </table>
+  </div>
+}
+@else {
+  <ul>
+    <li>No hay gastos registrados para este grupo</li>
+  </ul>
+}
