--- a/frontend/src/app/components/groups/groups-invitations-list/groups-invitations-list.component.html
+++ b/frontend/src/app/components/groups/groups-invitations-list/groups-invitations-list.component.html
@@ -5,7 +5,7 @@
       <th scope="col">Emisor</th>
       <th scope="col">Invitado</th>
       <th scope="col">Estado de invitacion</th>
-      <th></th>
+      <th scope="col" class="text-center">Acciones</th>
     </tr>
   </thead>
   <tbody class="table-group-divider">
@@ -18,12 +18,13 @@
           @case ('ACCEPTED') { Aceptada }
           @case ('PENDING') { Pendiente }
           @case ('REJECTED') { Rechazada }
+          @case ('CANCELLED') { Cancelada }
         }
       </td>
-      <!-- <td>{{invitation.status}}</td> -->
-      <td>
-        @if (invitation.senderUser.id === user.id) {
-          <i class="bi bi-trash3-fill ms-3 fs-5" style="color: #212529d4; cursor: pointer;"></i>
+      <td class="text-center">
+        @if (invitation.senderUser.id === user.id && invitation.status === 'PENDING') {
+          <i class="bi bi-trash3-fill fs-5" style="color: #212529d4; cursor: pointer;"
+            (click)="cancelInvitation(invitation.id)"></i>
         }
       </td>
     </tr>
