Actualizacion de grupos (fetch) cuando se realiza la cancelacion de una invitacion por parte del usuario para mostrar el nuevo estado de la misma en la tabla

--- a/frontend/src/app/components/groups/groups-main/groups-main.component.html
+++ b/frontend/src/app/components/groups/groups-main/groups-main.component.html
@@ -55,7 +55,8 @@
       <h4>Invitaciones</h4>
     </span>
     
-    <app-groups-invitations-list [invitations]="actualGroup.invitations" [user]="user!" />
+    <app-groups-invitations-list [invitations]="actualGroup.invitations" [user]="user!" [actualGroup]="actualGroup"
+      (actualGroupChange)="actualGroupChange.emit($event)" />
 
     <!-- Lista Gastos -->
     <h4 class="mt-5 mb-2">Gastos</h4>
