--- a/frontend/src/app/components/groups/groups-main/groups-main.component.html
+++ b/frontend/src/app/components/groups/groups-main/groups-main.component.html
@@ -1,6 +1,10 @@
 <!-- Detalles del grupo -->
 <app-group-details [selectedSpending]="selectedSpending" [deleteSelectedSpending]="deleteSelectedSpending" />
 
+@if (actualGroup.groupId !== -1) {
+  <app-group-edit [user]="user" [actualGroup]="actualGroup" (actualGroupChange)="actualGroupChange.emit($event)" />
+}
+
 @if (groups.listOwnedGroups.length === 0 && selectedGroupOption === "misGrupos") {
   <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
     <img style="width: 20em;" src="../../../assets/images/no_data.svg" alt="Descripción alternativa">
@@ -25,44 +29,45 @@
 }
 @else {
   @if (actualGroup.groupId == -1) {
-  <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
-    <i class="bi bi-files" style="font-size: 15em; color: rgba(0, 0, 0, 0.367);"></i>
-    <h2 class="fs-4 text-center" style="margin-top: -1.5em; width: 50%; color: #505050;">
-      Seleccione un grupo para ver los detalles
-    </h2>
-  </div>
+    <div class="d-flex flex-column justify-content-center align-items-center" style="height: 100%;">
+      <i class="bi bi-files" style="font-size: 15em; color: rgba(0, 0, 0, 0.367);"></i>
+      <h2 class="fs-4 text-center" style="margin-top: -1.5em; width: 50%; color: #505050;">
+        Seleccione un grupo para ver los detalles
+      </h2>
+    </div>
   }
   @else {
-  <div style="position: relative;">
-    <span style="width: 75%; display: flex; align-items: center;" >
-      <h2 class="text-break main-title-details-group">{{actualGroup.name}}</h2>
-      <i class="bi bi-pencil-square ms-3 fs-4" style="color: #212529d4; cursor: pointer;"></i>
-    </span>
-    <h3 class="details-price">${{actualGroup.totalBalance}}</h3>
-    <p class="mt-2">
-      <b>Categoria:</b> {{ actualGroup.groupCategory.name }}
-      <br />
-      <b>Descripcion:</b> {{ actualGroup.description }}
-    </p>
-    <i class="bi {{actualGroup.groupCategory.base64Image}}"
-      style="font-size: 8.8em; color: rgba(0, 0, 0, 0.367); position: absolute; top: -.35em; right: 0"></i>
-    <hr />
-  </div>
-
-  <div class="mt-4">
-    <!-- Lista invitaciones -->
-    <span class="mb-1" style="display: flex;">
-      <h4>Invitaciones</h4>
-    </span>
-    
-    <app-groups-invitations-list [invitations]="actualGroup.invitations" [user]="user!" [actualGroup]="actualGroup"
-      (actualGroupChange)="actualGroupChange.emit($event)" />
-
-    <!-- Lista Gastos -->
-    <h4 class="mt-5 mb-2">Gastos</h4>
-    <div class="col-12 overflow-x-hidden spendings-list" style="max-height:350px;">
-      <app-groups-list [groupSpendings]="groupSpendings" [setSelectedSpending]="setSelectedSpending" />
+    <div style="position: relative;">
+      <span style="width: 75%; display: flex; align-items: center;" >
+        <h2 class="text-break main-title-details-group">{{actualGroup.name}}</h2>
+        <i class="bi bi-pencil-square ms-3 fs-4" data-bs-target="#modal-group-edit-form" data-bs-toggle="modal" 
+          style="color: #212529d4; cursor: pointer;"></i>
+      </span>
+      <h3 class="details-price">${{actualGroup.totalBalance}}</h3>
+      <p class="mt-2">
+        <b>Categoria:</b> {{ actualGroup.groupCategory.name }}
+        <br />
+        <b>Descripcion:</b> {{ actualGroup.description }}
+      </p>
+      <i class="bi {{actualGroup.groupCategory.base64Image}}"
+        style="font-size: 8.8em; color: rgba(0, 0, 0, 0.367); position: absolute; top: -.35em; right: 0"></i>
+      <hr />
     </div>
-  </div>
+
+    <div class="mt-4">
+      <!-- Lista invitaciones -->
+      <span class="mb-1" style="display: flex;">
+        <h4>Invitaciones</h4>
+      </span>
+      
+      <app-groups-invitations-list [invitations]="actualGroup.invitations" [user]="user!" [actualGroup]="actualGroup"
+        (actualGroupChange)="actualGroupChange.emit($event)" />
+
+      <!-- Lista Gastos -->
+      <h4 class="mt-5 mb-2">Gastos</h4>
+      <div class="col-12 overflow-x-hidden spendings-list" style="max-height:350px;">
+        <app-groups-list [groupSpendings]="groupSpendings" [setSelectedSpending]="setSelectedSpending" />
+      </div>
+    </div>
   }
 }
