--- a/frontend/src/app/components/modals/group/group-members/group-members.component.html
+++ b/frontend/src/app/components/modals/group/group-members/group-members.component.html
@@ -4,20 +4,21 @@
     <div class="modal-content">
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="addFormModal">Invitar nuevo usuario</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" 
+          aria-label="Close" (click)="handleClose()"></button>
       </div>
 
       <div class="modal-body">
         <!-- SELECTOR DE USUARIOS (Mis contactos y busqueda de usaurios en general) -->
         <div class="btn-group" role="group">
           <input type="radio" [(ngModel)]="selectedUserOption" [value]="'misContactos'"
-            (ngModelChange)="setUserOption($event)" class="btn-check" name="misContactosRadio" id="misContactos" autocomplete="off"
-            [checked]="selectedUserOption === 'misContactos'">
+            (ngModelChange)="setUserOption($event)" class="btn-check" name="misContactosRadio" 
+            id="misContactos" autocomplete="off" [checked]="selectedUserOption === 'misContactos'">
           <label class="btn btn-sm btn-outline-dark" for="misContactos">Mis Contactos</label>
     
           <input type="radio" [(ngModel)]="selectedUserOption" [value]="'usuariosGeneral'"
-            (ngModelChange)="setUserOption($event)" class="btn-check" name="misContactosRadio" id="usuariosGeneral" autocomplete="off"
-            [checked]="selectedUserOption === 'usuariosGeneral'">
+            (ngModelChange)="setUserOption($event)" class="btn-check" name="misContactosRadio" 
+            id="usuariosGeneral" autocomplete="off" [checked]="selectedUserOption === 'usuariosGeneral'">
           <label class="btn btn-sm btn-outline-dark" for="usuariosGeneral">Todos los usuarios</label>
         </div>
 
@@ -26,26 +27,20 @@
           <form [formGroup]="membersForm">
             <div class="mb-2 mt-2">
               <label for="name-add-form" class="col-form-label">Buscar usuario:</label>
-              <input type="text" class="form-control" id="name-add-form" formControlName="searchInput">
+              <input type="text" class="form-control" id="name-add-form" 
+                formControlName="searchInput" (input)="handleSearch()">
             </div>
             @if (searched.length !== 0 ) {
-              <ul class="list-group list-group-numbered mt-3">
+              <ul class="list-group mt-3">
                 @for (searchedUser of searched; track $index) {
-                  <li class="list-group-item d-flex justify-content-between align-items-start">
-                    <div class="ms-2 me-auto">
+                  <li class="list-group-item d-flex justify-content-between align-items-start" (click)="handleAddUser(searchedUser)">
+                    <div class="ms-1 me-auto">
                       <div class="fw-bold">{{searchedUser.username}}</div>
                       {{searchedUser.name}} {{searchedUser.lastName}}
                     </div>
                   </li>
                 }
               </ul>
-            }
-            @if (selectedUsers.length !== 0) {
-              <div class="mt-4">
-                @for (user of selectedUsers; track $index) {
-                    <span class="badge rounded-pill text-bg-dark py-2 px-3 me-1">{{user.username}}</span>
-                }
-              </div>
             }
           </form>
         }
@@ -54,9 +49,8 @@
           <div class="mt-4">
             <ul class="list-group">
             @for (contact of [1,2]; track $index) {
-              <!-- <span class="badge rounded-pill text-bg-dark py-2 px-3 me-1">{{contact.username}}</span> -->
               <li class="list-group-item d-flex justify-content-between align-items-start">
-                <div class="ms-2 me-auto">
+                <div class="ms-1 me-auto">
                   <div class="fw-bold">Manaos</div>
                   Juan Cruz Gutierrez
                 </div>
@@ -65,10 +59,24 @@
             </ul>
           </div>
         }
+        <!-- Lista de usuarios seleccionados -->
+        @if (selectedUsers.length !== 0) {
+          <div class="mt-3" style="line-height: 2em;">
+            Usuarios seleccionados:
+            <br/>
+            @for (user of selectedUsers; track $index) {
+                <span class="badge rounded-pill text-bg-dark py-2 px-3 ms-1 me-1 delete-member-option" 
+                  style="font-size: .65em;" (click)="handleDeleteMember(user)">
+                  {{user.username}}
+                </span>
+              }
+          </div>
+        }
       </div>
 
+      <!-- FOOTER -->
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="handleClose()">Cerrar</button>
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
           @if (selectedUsers.length > 1) {
             Enviar invitaciones
