Refactor y finalizacion de invitacion a grupos. Ordenacion de response por ID. Verificaciones de estado de invitacion, casos de usuarios duplicados en grupos y en seleccion.

--- a/frontend/src/app/components/groups/groups-main/groups-main.component.html
+++ b/frontend/src/app/components/groups/groups-main/groups-main.component.html
@@ -4,7 +4,7 @@
 <!-- Modals para editar datos y administrar integrantes del grupo seleccionado -->
 @if (actualGroup.groupId !== -1) {
   <app-group-edit [user]="user" [actualGroup]="actualGroup" (actualGroupChange)="actualGroupChange.emit($event)" />
-  <app-group-members [user]="user" />
+  <app-group-members [user]="user" (actualGroupChange)="actualGroupChange.emit($event)" [actualGroup]="actualGroup" />
 }
 
 @if (groups.listOwnedGroups.length === 0 && selectedGroupOption === "misGrupos") {
