Validators en formulario de creacion de grupo

--- a/frontend/src/app/components/modals/group/group-create/group-create.component.css
+++ b/frontend/src/app/components/modals/group/group-create/group-create.component.css
@@ -10,3 +10,14 @@ ul li:hover {
     background-color: #ebeaea;
     cursor: pointer;
 }
+
+.delete-member-option {
+    cursor: pointer;
+    background-color: rgba(0, 0, 0, 0.71);
+    transition: background-color 0.3s;
+}
+
+.delete-member-option:hover {
+    background-color: #212529;
+    cursor: pointer;
+}
