--- a/frontend/src/app/components/contacts/contacts.component.html
+++ b/frontend/src/app/components/contacts/contacts.component.html
@@ -1,2 +1,105 @@
 <app-navbar />
-<p>contacts works!</p>
+<div style="min-height: 100vh; background-color: #000000ed;">
+  <div class="container" style="max-width: 1200px; padding-top: 1.5em;">
+    <div
+      style="display: flex; flex-direction: row; flex-wrap: wrap; justify-content: space-between; align-items: center;">
+      <h1 class="display-3 pt-4" style="color: white;">Mis contactos</h1>
+      <button type="button" class="btn btn-lg btn-light px-4 mt-3" id="btn-search-contact"
+        data-bs-target="#modal-search-contact-form" data-bs-toggle="modal">
+        Agregar contacto
+      </button>
+    </div>
+  </div>
+  <!-- MODAL para buscar un usuario registrado -->
+  <!-- <app-group-create [groupCategories]="groupCategories" [user]="currentUser!" /> -->
+
+  <div class="container" style="max-width: 1200px; margin-top: 2em">
+    <div class="row">
+
+      <div class="card mb-3 p-2 me-3" style="width: 24rem; background-color: #f2f2f2;">
+        <div class="card-body">
+          <div class="dropdown float-end">
+            <a class="text-muted dropdown-toggle font-size-16" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
+              <i class="bi bi-three-dots"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" data-bs-theme="dark" style="cursor:default;">
+              <li><a class="dropdown-item">Ver perfil</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item">Eliminar</a></li>
+            </ul>          
+          </div>
+
+          <div class="d-flex align-items-center">
+            <div>
+              <img src="../../../assets/images/default_user.png" class="avatar-md rounded-circle img-thumbnail" />
+            </div>
+            <div class="flex-1 ms-3">
+              <h5 class="font-size-16 mb-1"><a href="#" class="text-dark">Juan Cruz Gutierrez</a></h5>
+              <span class="text-muted mb-0">&#64;Manaos</span>
+            </div>
+          </div>
+
+          <div class="mt-2">
+            <p class="text-muted mb-0 fs-6">
+              <i class="bi bi-telephone-fill fs-4 pe-2 text-dark"></i>
+              2211231234
+            </p>
+            <p class="text-muted mb-0 mt-1">
+              <i class="bi bi-envelope-at-fill fs-4 pe-2 text-dark"></i>
+              manaos&#64;gmail.com
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 pt-4">
+            <button type="button" class="btn btn-secondary btn-sm w-50"><i class="bx bx-user me-1"></i> Ver grupos en comun</button>
+            <button type="button" class="btn btn-dark btn-sm w-50"><i class="bx bx-message-square-dots me-1"></i> Ver perfil</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3 p-2 me-3" style="width: 24rem; background-color: #f2f2f2;">
+        <div class="card-body">
+          <div class="dropdown float-end">
+            <a class="text-muted dropdown-toggle font-size-16" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true">
+              <i class="bi bi-three-dots"></i>
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" data-bs-theme="dark" style="cursor:default;">
+              <li><a class="dropdown-item">Ver perfil</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item">Eliminar</a></li>
+            </ul>          
+          </div>
+
+          <div class="d-flex align-items-center">
+            <div>
+              <img src="https://bootdey.com/img/Content/avatar/avatar1.png" alt=""
+                class="avatar-md rounded-circle img-thumbnail" />
+            </div>
+            <div class="flex-1 ms-3">
+              <h5 class="font-size-16 mb-1"><a href="#" class="text-dark">Juan Cruz Gutierrez</a></h5>
+              <span class="text-muted mb-0">&#64;Manaos</span>
+            </div>
+          </div>
+
+          <div class="mt-2">
+            <p class="text-muted mb-0 fs-6">
+              <i class="bi bi-telephone-fill fs-4 pe-2 text-dark"></i>
+              2211231234
+            </p>
+            <p class="text-muted mb-0 mt-1">
+              <i class="bi bi-envelope-at-fill fs-4 pe-2 text-dark"></i>
+              manaos&#64;gmail.com
+            </p>
+          </div>
+
+          <div class="d-flex gap-2 pt-4">
+            <button type="button" class="btn btn-secondary btn-sm w-50"><i class="bx bx-user me-1"></i> Ver grupos en comun</button>
+            <button type="button" class="btn btn-dark btn-sm w-50"><i class="bx bx-message-square-dots me-1"></i> Ver perfil</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+<!-- <app-footer /> -->
