--- a/frontend/src/app/components/contacts/contacts.component.html
+++ b/frontend/src/app/components/contacts/contacts.component.html
@@ -11,7 +11,7 @@
     </div>
   </div>
   <!-- MODAL para buscar un usuario registrado -->
-  <!-- <app-group-create [groupCategories]="groupCategories" [user]="currentUser!" /> -->
+  <app-contact-search [user]="currentUser!" [contacts]="contacts"/>
 
   <div class="container" style="max-width: 1200px; margin-top: 2em">
     <div class="row">
